tests/errors/sem17.kt
fun main() {
    var x: Boolean = 5 < true; // invalid
}